--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">MoodMorning</string>
+    <string name="nothing">null</string>
     <string name="week">1 week ago</string>
     <string name="six_days">6 days ago</string>
     <string name="five_days">5 days ago</string>
